# ClashOfMinions

./: .editorconfig  Concept.rtf  Concept.txt  Introduction.txt
ClashOfMinions/: build.gradle
ClashOfMinions/android/: AndroidManifest.xml  build.gradle
ClashOfMinions/android/assets/: dimbo.fnt  dimboSmall.fnt
ClashOfMinions/android/res/values/: strings.xml
ClashOfMinions/android/src/com/clom/clashofminions/: AndroidLauncher.java
ClashOfMinions/core/src/com/clom/clashofminions/: ClashOfMinions.java  GameBackgroundNode.java  GameScreen.java  LoadingScreen.java  MainMenuScreen.java  MenuBackgroundNode.java  SettingsScreen.java  UIConstants.java
ClashOfMinions/core/src/com/clom/clashofminions/BattleField/: BattleField.java  BattleFieldLogic.java  DetailPopUpNode.java  Minion.java  MinionNode.java  Projectile.java
ClashOfMinions/core/src/com/clom/clashofminions/Connection/: AIConnectionHandler.java  ConnectionHandler.java  ConnectionHandlerDelegate.java  GameConnectionHandler.java  ServerConnectionHandler.java
ClashOfMinions/core/src/com/clom/clashofminions/Nodes/: ButtonNode.java  GameOverGroup.java  ManaBarNode.java  SliderNode.java  SliderType.java
ClashOfMinions/core/src/org/json/: CDL.java
ClashOfMinions/desktop/: build.gradle
ClashOfMinions/desktop/src/com/clom/clashofminions/desktop/: DesktopLauncher.java
ClashOfMinions/ios/: build.gradle  robovm.properties
ClashOfMinions/ios/src/com/clom/clashofminions/: IOSLauncher.java
Game/: build.gradle
Game/android/: build.gradle
Game/android/src/com/mygdx/game/: AndroidLauncher.java
Game/core/src/com/mygdx/game/: CardGame.java  GameBackgroundNode.java  GameScreen.java  LoadingScreen.java  MainMenuScreen.java  MenuBackgroundNode.java  SettingsScreen.java  UIConstants.java
Game/core/src/com/mygdx/game/BattleField/: BattleField.java  BattleFieldLogic.java  DetailPopUpNode.java  Minion.java  MinionNode.java  Projectile.java
Game/core/src/com/mygdx/game/Nodes/: ButtonNode.java  ManaBarNode.java  SliderNode.java  SliderType.java
Game/desktop/src/com/mygdx/game/desktop/: DesktopLauncher.java
Game/gradle/wrapper/: gradle-wrapper.properties
Presentation/: Text.txt
Server/: .gitignore  Cardgame.cabal  Main.hs  README.md  default.nix  module.nix  protocol.md  shell.nix  stack.yaml
Server/CardGame/: Client.hs  Game.hs  Types.hs
Server/app/: Main.hs
Server/src/: Client.hs  Game.hs  GameLogic.hs  Pair.hs  Server.hs  Test.hs  Types.hs  Utils.hs
Server/src/Client/: Types.hs
Server/src/ClientStates/: Generic.hs  Lobby.hs  Waiting.hs
Server/src/ClientStates/Generic/: Types.hs
Server/src/ClientStates/Lobby/: Types.hs
Server/src/ClientStates/Waiting/: Types.hs
Server/src/Game/: Types.hs
Server/src/GameLogic/: Types.hs
Server/src/Pair/: Types.hs
