name:                Cardgame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/greensn/CardGame
license:             BSD3
license-file:        LICENSE
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com
copyright:           2017 Silvan Mosberger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
                     , Types
                     , Game
                     , Client.Types
                     , ClientStates.Generic
                     , ClientStates.Generic.Types
                     , ClientStates.Lobby
                     , ClientStates.Lobby.Types
                     , ClientStates.Waiting
                     , ClientStates.Waiting.Types
                     , Game.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.2.1.0
                     , network
                     , stm
                     , bytestring
                     , random
                     , transformers
                     , monads-tf
                     , monad-stm
                     , transformers
                     , monad-stm
  default-language:    Haskell2010

executable server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Cardgame
                     , network
                     , stm
                     , monad-stm
                     , transformers
  default-language:    Haskell2010

test-suite Server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cardgame
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/greensn/CardGame
